# ComputationalGeosciences

./: README.md  pyproject.toml  requirements.txt
gravity_lecture/: gravity.ipynb  gravity_complete.ipynb  mars_topo.py
sea_level_lecture/: sea_level.ipynb  sea_level_complete.ipynb
